<resources>
    <string name="app_name">Tawazon</string>
    <string name="breathe_and_start_again">تنفس وابدأ من جديد</string>
    <string name="meditate_theـevening">تأمل المساء</string>
    <string name="hoping_for_the_intellectual">تأمل للإسترخاء الفكري والجسدي للأطفال والنو...</string>
    <string name="five_minute">5 دقائق</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">الرئيسية</string>
    <string name="body">جسدي</string>
    <string name="meditation">تأملات</string>
    <string name="soul">روحي</string>
    <string name="kids">الأطفال</string>
</resources>
