<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_icon"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/body_icon"
        android:checked="true"
        android:icon="@drawable/ic_body"
        android:title="@string/body"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/meditation_icon"
        android:checked="true"
        android:icon="@drawable/ic_meditation"
        android:title="@string/meditation"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/soul_icon"
        android:checked="true"
        android:icon="@drawable/ic_soul"
        android:title="@string/soul"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/kids_icon"
        android:checked="true"
        android:icon="@drawable/ic_kids"
        android:title="@string/kids"
        app:showAsAction="ifRoom" />
</menu>